# solar-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: lib.rs  solar.rs  utils.rs
tests/: test_solar.rs  test_utils.rs
