[package]
name = "solar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rayon = "1.8.1"
anyhow ="1.0.80"
tempfile = "3.10.0"
candle-core = "0.3.3"
candle-nn = "0.3.3"
candle-transformers = "0.3.3"
tokenizers = "0.15.2"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
